--- a/package.json
+++ b/package.json
@@ -18,7 +18,8 @@
   },
   "homepage": "https://github.com/xoak/no-bot#readme",
   "dependencies": {
-    "discord.js": "^11.5.1"
+    "discord.js": "^11.5.1",
+    "google-it": "^1.5.0"
   },
   "devDependencies": {
     "dotenv": "^8.2.0"
