--- a/package.json
+++ b/package.json
@@ -19,7 +19,8 @@
   "homepage": "https://github.com/xoak/no-bot#readme",
   "dependencies": {
     "discord.js": "^11.5.1",
-    "google-it": "^1.5.0"
+    "google-it": "^1.5.0",
+    "nodemon": "^2.0.2"
   },
   "devDependencies": {
     "dotenv": "^8.2.0"
