--- a/package.json
+++ b/package.json
@@ -20,7 +20,9 @@
   "dependencies": {
     "discord.js": "^11.5.1",
     "google-it": "^1.5.0",
+    "node-opus": "^0.3.3",
     "nodemon": "^2.0.2",
+    "ytdl-core": "^1.0.9",
     "ytpl": "^0.1.20"
   },
   "devDependencies": {
