--- a/package.json
+++ b/package.json
@@ -18,7 +18,7 @@
   },
   "homepage": "https://github.com/xoak/no-bot#readme",
   "dependencies": {
-    "discord.js": "^11.5.1",
+    "discord.js": "github:discordjs/discord.js",
     "google-it": "^1.5.0",
     "node-opus": "^0.3.3",
     "nodemon": "^2.0.2",
