--- a/package.json
+++ b/package.json
@@ -22,7 +22,7 @@
     "google-it": "^1.5.0",
     "node-opus": "^0.3.3",
     "nodemon": "^2.0.2",
-    "ytdl-core": "^1.0.9",
+    "ytdl-core-discord": "^1.1.0",
     "ytpl": "^0.1.20"
   },
   "devDependencies": {
