--- a/package.json
+++ b/package.json
@@ -18,9 +18,9 @@
   },
   "homepage": "https://github.com/xoak/no-bot#readme",
   "dependencies": {
+    "@discordjs/opus": "^0.1.0",
     "discord.js": "github:discordjs/discord.js",
     "google-it": "^1.5.0",
-    "node-opus": "^0.3.3",
     "nodemon": "^2.0.2",
     "ytdl-core-discord": "^1.1.0",
     "ytpl": "^0.1.20"
