--- a/package.json
+++ b/package.json
@@ -23,7 +23,8 @@
     "google-it": "^1.5.0",
     "nodemon": "^2.0.2",
     "ytdl-core-discord": "^1.1.0",
-    "ytpl": "^0.1.20"
+    "ytpl": "^0.1.20",
+    "ytsearcher": "^1.2.2"
   },
   "devDependencies": {
     "dotenv": "^8.2.0"
