--- a/package.json
+++ b/package.json
@@ -12,7 +12,7 @@
     "url": "git+https://github.com/xoak/no-bot.git"
   },
   "author": "",
-  "license": "ISC",
+  "license": "MIT",
   "bugs": {
     "url": "https://github.com/xoak/no-bot/issues"
   },
@@ -22,9 +22,9 @@
     "discord.js": "github:discordjs/discord.js",
     "google-it": "^1.5.0",
     "nodemon": "^2.0.2",
+    "scrape-youtube": "0.0.9",
     "ytdl-core-discord": "^1.1.0",
-    "ytpl": "^0.1.20",
-    "ytsearcher": "^1.2.2"
+    "ytpl": "^0.1.20"
   },
   "devDependencies": {
     "dotenv": "^8.2.0"
