--- a/package.json
+++ b/package.json
@@ -26,7 +26,5 @@
     "ytdl-core-discord": "^1.1.0",
     "ytpl": "^0.1.20"
   },
-  "devDependencies": {
-    "dotenv": "^8.2.0"
-  }
+  "devDependencies": {}
 }
