--- a/package.json
+++ b/package.json
@@ -23,7 +23,7 @@
     "google-it": "^1.5.0",
     "nodemon": "^2.0.3",
     "scrape-youtube": "^0.2.0",
-    "ytdl-core-discord": "^1.2.0",
+    "ytdl-core-discord": "github:amishshah/ytdl-core-discord",
     "ytpl": "^0.1.21"
   },
   "devDependencies": {}
